# Assignment-

./: .env  COMMIT_EDITMSG  Cargo.toml  README.md  config  dfx.json  index
local/: canister_ids.json  network-id
local/canisters/wallet/: constructor.old.did  index.js  service.did.d.ts  service.did.js  wallet.wasm
logs/: HEAD
logs/refs/heads/: main
refs/heads/: main
src/token_wallet_backend/: Cargo.toml
src/token_wallet_backend/src/: lib.rs
